--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -1,14 +1,26 @@
-name: Command Shells
-
-on: [push]
-
 jobs:
   run-shell-command:
     runs-on: ubuntu-latest
-    steps:
+    steps: 
       - name: echo a string
-        run: echo "Hello Carey B"
-      - name: multiline script
+        run: echo "Hello World"
+        timeout-minutes: 0
+      - name: multiline script 
         run: |
-          node -v
-          npm -v
+           node -v 
+           npm -v
+      - name: python Command 
+        run: |
+          import platform 
+          print
+          (platform.processor())
+        shell: python
+  run-windwos-commands:
+    runs-on: windows-latest
+    needs: ["run-shell-command"]
+    steps:
+      - name: Directory PowerShell
+        run: Get-Location 
+      - name: Directory Bash 
+        run: pwd 
+        shell: bash 
