--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -1,6 +1,10 @@
 name: Shell Commands 
 
-on: [push]
+on:
+  repository_dispatch:
+    types: [build]
+  pull_request:
+    
 
 jobs:
   run-shell-command:
