--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -10,6 +10,8 @@ jobs:
   run-shell-command:
     runs-on: ubuntu-latest
     steps: 
+      - name: payload
+        run: echo ${{ github.event.client_payload.example-key }}
       - name: echo a string
         run: echo "Hello World"
         timeout-minutes: 0
