--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,6 +1,10 @@
 name: Actions
 
-on: [push, pull_request]
+on: 
+  push:
+    branches:
+      - main
+      - 'feature/**'
 
 jobs:
   run-github-actions:
