--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -76,3 +76,8 @@ jobs:
           echo "WF_ENV: ${WF_ENV}"
           echo "JOB_ENV: ${JOB_ENV}"
           echo "STEP_ENV: ${STEP_ENV}"
+  print-env:
+    runs-on: ubuntu-latest
+    steps:
+     - name: Print env
+       run: echo printenv
