added more stuff to action

--- a/.github/workflows/customActions.yml
+++ b/.github/workflows/customActions.yml
@@ -12,3 +12,4 @@ jobs:
           who-to-greet: "Mary and Carey"
       - run: |
           echo "Time: ${{ steps.hello.outputs.time }}"
+          echo ${HELLO}
