--- a/.github/actions/issue/package.json
+++ b/.github/actions/issue/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "@actions/core": "^1.6.0",
-    "@actions/github": "^5.0.0"
+    "@actions/github": "^5.0.0",
+    "@octokit/action": "^3.18.0"
   },
   "devDependencies": {
     "@vercel/ncc": "^0.33.2"
