--- a/.github/actions/issue/action.yml
+++ b/.github/actions/issue/action.yml
@@ -13,7 +13,7 @@ inputs:
     required: true
   assignees:
     description: "Issue Assignees"
-    required: false
+    required: true
 outputs:
   issue: # id of output
     description: "The issue object as a json string"
